rename iceTransportType to iceTransportPolicy

also renames "servers" to "iceServers"

BUG=685784

Review-Url: https://codereview.chromium.org/2659783002
Cr-Commit-Position: refs/heads/master@{#446664}

Former-commit-id: a77ff271cfd7bb0602db0d8965657c228c8f591a